--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -117,7 +117,19 @@
   transition: all .4s ease 0s;
   -webkit-transition: all .4s ease 0s; 
 }
-
+.FormContent-2{
+  position: relative;
+  margin-bottom: 10px;
+  margin: auto;
+  width: 100%;
+  background-color: rgb(255 255 255);
+  border: 1px solid #e0e0e0;
+  border-radius: 0;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 8px/7px;
+  transition: all .4s ease 0s;
+  -webkit-transition: all .4s ease 0s; 
+}
 #s4-ribbonrow{
   display: none!important;
 }
