--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -2859,7 +2859,8 @@ min-width: 250px !important;
 }
 .header-cell:last-child,
 .body-cell:last-child {
-min-width: 160px !important;
+/* min-width: 160px !important; */
+min-width: 180px !important;
 }
 
 .table-toolbar{
@@ -2960,6 +2961,9 @@ float: right;
 .body-cell:not(.frozen) {
   min-height: 150px;
 } */
+
+
+/* 5/2/2024 */
 .body-cell,.header-cell:not(.frozen){
-	min-width: 125px !important;
+	min-width: 150px !important;
 }
