--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -2967,9 +2967,29 @@ float: right;
 
 /* 5/2/2024 */
 .body-cell,.header-cell:not(.frozen){
-	min-width: 150px !important;
+	/* min-width: 150px !important; */
+  min-width: 150px ;
 }
 span.iconArrow {
   font-size: 10px;
   margin-left: 6px;
 }
+
+.rdt_TableCol:first-child {
+  /*width: 75px;
+      min-width: 75px;
+      max-width: 75px;*/
+      width: 48px;
+      min-width: 48px;
+      max-width: 48px;
+  }
+   
+   
+  .ePmbQn {
+      -webkit-box-flex: 1;
+      flex: 1 0 0px;
+  /*min-width: 100px;
+      max-width: 100px;*/
+      min-width: 80px;
+      max-width: 80px;
+  }
