--- a/src/webparts/newMro/CSS/left-nav.css
+++ b/src/webparts/newMro/CSS/left-nav.css
@@ -166,7 +166,8 @@ color: #666666!important;
 #content {
   width: 100%;
   padding: 0;
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  min-height: 60vh;
   -webkit-transition: all .3s;
   -o-transition: all .3s;
   transition: all .3s;
