Full date in weeklytimesheet,on-behalf of Employee names in Ascending order

--- a/src/webparts/newMro/CSS/WeeklyTimesheet.css
+++ b/src/webparts/newMro/CSS/WeeklyTimesheet.css
@@ -78,7 +78,8 @@
     .day {
         display: block;
         color: #ffff;
-        font-size: 16px;
+        /* font-size: 16px; Commneted on 5/14/2024 */
+        font-size: 12px;
     }
     .weekDay{
         width: 66px!important;
