--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -3206,9 +3206,30 @@ padding: 0;
   z-index: 1;
   height: 15px;
 }
+.col-md-3 .calendar-icon-custom {
+  position: absolute;
+  top: 50%;
+  right: 125px; /* Adjust the distance from the right edge of the input box */
+  transform: translateY(-50%);
+  pointer-events: none; /* Ensures the icon doesn't block interactions with the input box */
+  z-index: 1;
+  height: 15px;
+}
+.col-md-4 .calendar-icon-custom {
+  position: absolute;
+  top: 50%;
+  right: 200px; /* Adjust the distance from the right edge of the input box */
+  transform: translateY(-50%);
+  pointer-events: none; /* Ensures the icon doesn't block interactions with the input box */
+  z-index: 1;
+  height: 15px;
+}
 .calendar-icon:hover{
   cursor:pointer;
 }
 .react-datepicker-wrapper {
   position: relative;
+}
+#tablePDF div{
+  cursor: pointer;
 }
