New changes committed, including pdf

--- a/src/webparts/newMro/CSS/WeeklyTimesheet.css
+++ b/src/webparts/newMro/CSS/WeeklyTimesheet.css
@@ -45,6 +45,7 @@
         color: white;
         font-size: 14px;
         padding-top: 2px;
+        margin-left: 5px;
     }
     .span-fa-plus:hover{
         cursor: pointer;
