--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -2084,12 +2084,12 @@ left: 47.5%;
 top: 43.5%;
 }
 .loader-bg {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color:rgba(255, 255, 255, .78);
+  background-color: hsla(0, 0%, 100%, .78);
   z-index: 100;
 }
 @-webkit-keyframes spin {
@@ -2611,8 +2611,8 @@ li {
   border-top-right-radius: calc(.3rem - 1px);
   /* background: #0d2f4b;
   color: #fff; */
-  background-color: #ccd6df;
-  color: #0d2f4b;
+  background-color: #efdfdf;
+  color: #cb2726;
 }
 
 .bRirNn{
